<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.mobiledevprojectdibs.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sell"
        android:name="com.project.mobiledevprojectdibs.ui.gallery.GalleryFragment"
        android:label="@string/sell"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.project.mobiledevprojectdibs.ui.slideshow.SlideshowFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/profile"
        android:name="com.project.mobiledevprojectdibs.Profile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/transactionHistory"
        android:name="com.project.mobiledevprojectdibs.TransactionHistory"
        android:label="@string/transaction_history"
        tools:layout="@layout/fragment_transaction_history" />
    <fragment
        android:id="@+id/myProducts"
        android:name="com.project.mobiledevprojectdibs.MyProducts"
        android:label="@string/my_products"
        tools:layout="@layout/fragment_my_products" />
    <activity
        android:id="@+id/logout"
        android:name="com.project.mobiledevprojectdibs.Login"
        tools:layout="@layout/activity_login" />
</navigation>