<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_notification"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/transactionHistory"
            android:icon="@drawable/ic_notification"
            android:title="@string/transaction_history" />
        <item
            android:id="@+id/myProducts"
            android:icon="@drawable/ic_notification"
            android:title="@string/my_products" />
        <item/>
        <item/>
        <item/>
        <item/>
        <item/>
        <item/>
        <item/>
        <item/>
        <item/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_notification"
            android:title="@string/logout" />

    </group>
</menu>